--- a/Starter_Code/forecasting_net_prophet.ipynb
+++ b/Starter_Code/forecasting_net_prophet.ipynb
@@ -85,7 +85,7 @@
       "source": [
         "# Import the required libraries and dependencies\n",
         "import pandas as pd\n",
-        "#from prophet import Prophet\n",
+        "from prophet import Prophet\n",
         "import datetime as dt\n",
         "import numpy as np\n",
         "%matplotlib inline"
