Edited a few of the answers to the homework questions

--- a/Starter_Code/forecasting_net_prophet.ipynb
+++ b/Starter_Code/forecasting_net_prophet.ipynb
@@ -691,7 +691,7 @@
         "The week of the year is a bit more vague in terms of interpreting a trend in the data from my perspective. One could possibly see seasonal trends in the data. The number of searches is at its peak in the first half of the first quarter of the year, rising and falling after until reaching its first substantial trough around end of April, beginning of May. Another peak is reached near the end of the third quarter, before the largest decline occurs around week 35. The number of searches do not begin to rise at a steady pace until around week 42-43, when it reaches its another high peak around week 50. \n",
         "\n",
         "\n",
-        "Looking at all three plots and interpeting together their time series data, the most effective time to market for the company would be from January to the end of February, from Monday morning to Tuesday morning, and between the hours of 8:00AM and 12:00AM with a more concentrated effort between the hours of 10:00-1:00PM within that timeframe. \n",
+        "Looking at all three plots and interpeting together their time series data, the most effective time to market for the company would be from January to the end of February, from Monday morning to Tuesday morning, and between the hours of 8:00AM and 12:00AM. A more concentrated effort is recommended between the hours of 10:00-1:00PM within that timeframe as the number of searches is increasing at a more exponentially aggressive rate during that period than the rest of the day. \n",
         "\n",
         "\n"
       ]
@@ -1722,7 +1722,7 @@
       "source": [
         "**Question:** Does a predictable relationship exist between the lagged search traffic and the stock volatility or between the lagged search traffic and the stock price returns?\n",
         "\n",
-        "**Answer:** No, both relationships - lagged search traffic and stock volatility / lagged search traffic and stock price returns - show weak correlations with the former showing weak negative and the latter showing weak positive. Both of these correlations show no evidence of any correlation. "
+        "**Answer:** No, both relationships - lagged search traffic and stock volatility / lagged search traffic and stock price returns - show weak correlations with the former showing weak negative and the latter showing weak positive. Both of these correlations show little to no evidence of any predictable relationship.  "
       ]
     },
     {
