--- a/Starter_Code/forecasting_net_prophet.ipynb
+++ b/Starter_Code/forecasting_net_prophet.ipynb
@@ -1722,7 +1722,7 @@
       "source": [
         "**Question:** Does a predictable relationship exist between the lagged search traffic and the stock volatility or between the lagged search traffic and the stock price returns?\n",
         "\n",
-        "**Answer:** No, both relationships - lagged search traffic and stock volatility / lagged search traffic and stock price returns - show weak correlations with the former showing weak negative and the latter showing weak positive. Both of these correlations show little to no evidence of any predictable relationship.  "
+        "**Answer:** No, both relationships - lagged search traffic and stock volatility / lagged search traffic and stock price returns - show weak correlations with the former showing a weak negative and the latter showing a weak positive. Both of these correlations show little to no evidence of any predictable relationship.  "
       ]
     },
     {
